Fixed text alignment on login page (for desktop clients).

--- a/theme/twi/src/frontend/view/auth/auth.styl
+++ b/theme/twi/src/frontend/view/auth/auth.styl
@@ -61,6 +61,7 @@
     cf()
     width 312px * 2
     padding 0
+    text-align left
 
     .field-container
       padding 0 6px
